--- a/diplom_project-main/diplom/templates/diplom/diplom_form.html
+++ b/diplom_project-main/diplom/templates/diplom/diplom_form.html
@@ -5,7 +5,7 @@
 {% block content %}
     <body>
         <h1>Введите данные</h1>
-        <form method="post">
+        <form method="post" action="{% url 'diplom_spo:diplom_edit' diplom.pk %}">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Сохранить</button>
